--- a/AutosportInfo/Base.lproj/Main.storyboard
+++ b/AutosportInfo/Base.lproj/Main.storyboard
@@ -364,13 +364,22 @@
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="818"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="H6o-OG-0xy">
-                                                <rect key="frame" x="0.0" y="0.0" width="414" height="409"/>
+                                                <rect key="frame" x="0.0" y="43.666666666666686" width="414" height="409"/>
                                             </imageView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MTH-Sw-xSs">
+                                                <rect key="frame" x="8" y="8.0000000000000018" width="398" height="27.666666666666671"/>
+                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="23"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
                                         </subviews>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <constraints>
+                                            <constraint firstItem="MTH-Sw-xSs" firstAttribute="leading" secondItem="ykF-6F-3kl" secondAttribute="leadingMargin" id="7x0-pn-DlL"/>
                                             <constraint firstItem="H6o-OG-0xy" firstAttribute="height" secondItem="ykF-6F-3kl" secondAttribute="height" multiplier="1:2" id="FZ0-V9-oC3"/>
-                                            <constraint firstItem="H6o-OG-0xy" firstAttribute="top" secondItem="ykF-6F-3kl" secondAttribute="top" id="HYX-O2-fpV"/>
+                                            <constraint firstItem="MTH-Sw-xSs" firstAttribute="top" secondItem="ykF-6F-3kl" secondAttribute="topMargin" id="Gzg-8c-dvy"/>
+                                            <constraint firstItem="MTH-Sw-xSs" firstAttribute="trailing" secondItem="ykF-6F-3kl" secondAttribute="trailingMargin" id="IZT-YT-Gsg"/>
+                                            <constraint firstItem="H6o-OG-0xy" firstAttribute="top" secondItem="MTH-Sw-xSs" secondAttribute="bottom" constant="8" symbolic="YES" id="Vt5-Qs-6Ad"/>
                                             <constraint firstItem="H6o-OG-0xy" firstAttribute="leading" secondItem="ykF-6F-3kl" secondAttribute="leading" id="YdC-QY-UKL"/>
                                             <constraint firstAttribute="trailing" secondItem="H6o-OG-0xy" secondAttribute="trailing" id="g61-dc-zCl"/>
                                         </constraints>
@@ -397,6 +406,7 @@
                     </view>
                     <connections>
                         <outlet property="circImageView" destination="H6o-OG-0xy" id="x0G-uc-KMx"/>
+                        <outlet property="circuitNameLabel" destination="MTH-Sw-xSs" id="kWv-Rz-06f"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ue8-JT-Xpe" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
