--- a/AutosportInfo/Base.lproj/Main.storyboard
+++ b/AutosportInfo/Base.lproj/Main.storyboard
@@ -290,19 +290,19 @@
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pLA-Ly-Puk">
                                             <rect key="frame" x="20" y="11" width="374" height="96"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="clip" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0qY-9v-qq4">
-                                                    <rect key="frame" x="125" y="8" width="241" height="80"/>
-                                                    <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="21"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="AUTODROMO NATIONALE DI MUGELLO " textAlignment="center" lineBreakMode="clip" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0qY-9v-qq4">
+                                                    <rect key="frame" x="116.66666666666664" y="8" width="249.33333333333337" height="80"/>
+                                                    <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="20"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="WfO-qZ-po3">
-                                                    <rect key="frame" x="8" y="8" width="109" height="80"/>
+                                                    <rect key="frame" x="8" y="8" width="100.66666666666667" height="80"/>
                                                 </imageView>
                                             </subviews>
                                             <color key="backgroundColor" systemColor="systemGray4Color"/>
                                             <constraints>
-                                                <constraint firstItem="0qY-9v-qq4" firstAttribute="width" secondItem="pLA-Ly-Puk" secondAttribute="width" multiplier="2:3" constant="-8.3333333333333144" id="18y-oL-fND"/>
+                                                <constraint firstItem="0qY-9v-qq4" firstAttribute="width" secondItem="pLA-Ly-Puk" secondAttribute="width" multiplier="2:3" id="18y-oL-fND"/>
                                                 <constraint firstItem="WfO-qZ-po3" firstAttribute="top" secondItem="pLA-Ly-Puk" secondAttribute="top" constant="8" id="FkE-K3-LTg"/>
                                                 <constraint firstItem="0qY-9v-qq4" firstAttribute="top" secondItem="pLA-Ly-Puk" secondAttribute="top" constant="8" id="GVV-g5-13A"/>
                                                 <constraint firstAttribute="bottom" secondItem="WfO-qZ-po3" secondAttribute="bottom" constant="8" id="KDk-aQ-usL"/>
